ODD generator improvements (wip)